styles/index.css
body {
    color: blue;
    font-family: Arial, Helvetica, sans-serif;
}

header {
    display: block;
    margin: auto auto;
    text-align: center;
    width: 20%;
    height: 30%;
    line-height: 175%;
}

header:hover {
    color: red;
}

p {
    margin: 5px;
    border: solid 1px blue;
    padding: 5px;
}
#container {
    display: flex;
    justify-content:space-evenly;
    margin: auto auto; 
    padding: 20px;
    /* background-color: red; */
}

/* #weather-display {
    background-color: yellow;
} */

#adjustable {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin-bottom: 5px;
    font-size: 2vw;
}

#degrees {
    display: flex;
    flex-direction: row;
}

#temp {
    font-weight: bold;
}

#city-name:hover, #temp:hover {
    font-style: italic;
    color: red;
}

#garden {
    display: flex;
    margin: auto auto;
    width: 30vw;
    height: 30vw;
    justify-content: center;
    /* background-color: red; */
    padding: 10px;
}

.controls {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    /* background-color: yellow; */
    text-align: center;
}

#controls > div {
    font-size: 1em;
    text-align: center;

}

#temp {
    display: flex;
    justify-content: space-evenly;
}

.arrows {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
}

#up, #down {
    font-size: 4em;
}

.button {
    display: block;
    margin: auto auto;
    color: blue;
    background-color: white;
    border: none;
    font-size: 3em;
}

.button:hover {
    background-color: blue;
    color: white;
}

#up {
    text-align: center;
    transform: rotate(-90deg);

}

#down {
    text-align: center;
    transform: rotate(90deg);
}

input[type=text] {
    color: blue;
    font-size: inherit;
    border: none;
    text-align: center;
    margin: 5px;
    padding: 5px;
    border: solid 1px blue;
}

input[type=text]:hover {
    background-color: yellow;
}

.dropbutton {
    background-color: blue;
    border: solid 1px blue;
    color: white;
    padding: 10px;
    min-width: 180px;
    font-size: inherit;
    border: none;
    cursor: pointer;
}

select {
    background-color: blue;
    color: white;
    padding: 10px;
    min-width: 180px;
    font-size: inherit;
    cursor: pointer;
}

